tests/unit/verification/config/snapshots/unit_test__verification__config__profile_review__verification_profile_disabled_owner_task.snap
---
source: tests/unit/verification/config/profile_review.rs
expression: rendered
---
[verify] src/api.rs
   |owner: src/api
   |responsibility_review: pending phase=before_verification fingerprint=rustv:4599954b95b7faff
   |why: responsibility_review=owner-local verification override references disabled task kind
   |requires: responsibility_review=profile_resolution
   |fact: responsibility_review.configured=stress
   |fact: responsibility_review.disabled=stress
   |contract: responsibility_review=update the verification profile hint to match parser facts, or attach a complete waiver

[verify-report]
   |bundle: renderer=render_rust_verification_report_bundle_json artifact=verification_report_bundle.json artifacts=2
   |required: verification_plan_json renderer=render_rust_verification_plan_json artifact=verification_plan.json tasks=1 kinds=responsibility_review
   |required: task_index_json renderer=build_rust_verification_task_index + render_rust_verification_task_index_json artifact=task_index.json tasks=1 kinds=responsibility_review
