tests/unit/verification/config/snapshots/unit_test__verification__config__profile_review__verification_profile_empty_responsibilities.snap
---
source: tests/unit/verification/config/profile_review.rs
expression: rendered
---
[verify] src/api.rs
   |owner: src/api
   |responsibility_review: pending phase=before_verification fingerprint=rustv:ad35e34639e01cad
   |why: responsibility_review=profile hint declares no responsibilities for owner
   |requires: responsibility_review=profile_resolution
   |fact: responsibility_review.profile=responsibilities=<none>
   |contract: responsibility_review=update the verification profile hint to match parser facts, or attach a complete waiver

[verify-report]
   |bundle: renderer=render_rust_verification_report_bundle_json artifact=verification_report_bundle.json artifacts=1
   |required: verification_plan_json renderer=render_rust_verification_plan_json artifact=verification_plan.json tasks=1 kinds=responsibility_review
