tests/unit/verification/config/snapshots/unit_test__verification__config__profile_review__verification_profile_override_without_rationale.snap
---
source: tests/unit/verification/config/profile_review.rs
expression: rendered
---
[verify] src/api.rs
   |owner: src/api
   |security: pending phase=before_release fingerprint=rustv:be5021ff926a2e4c
   |why: security=owner profile explicitly requests security verification
   |requires: security=attack_classes,authorization_boundary,findings
   |fact: security.profile=public_api
   |contract: security=security skill must report scanned attack classes and authorization-boundary result for this fingerprint
   |responsibility_review: pending phase=before_verification fingerprint=rustv:155d1b8cd4498a95
   |why: responsibility_review=owner-local verification override needs compact rationale
   |requires: responsibility_review=profile_resolution
   |fact: responsibility_review.profile=public_api
   |fact: responsibility_review.derived=stress
   |fact: responsibility_review.configured=security
   |contract: responsibility_review=update the verification profile hint to match parser facts, or attach a complete waiver

[verify-report]
   |bundle: renderer=render_rust_verification_report_bundle_json artifact=verification_report_bundle.json artifacts=1
   |required: verification_plan_json renderer=render_rust_verification_plan_json artifact=verification_plan.json tasks=2 kinds=security,responsibility_review
